[build-system]
requires = [ "whey",]
build-backend = "whey"

[project]
name = "car-charging"
version = "0.0.0"
description = "Utilities for reading car charger consumption via InfluxDB"
readme = "README.rst"
keywords = []
dynamic = [ "requires-python", "classifiers", "dependencies",]

[project.license]
file = "LICENSE"

[[project.authors]]
name = "Dominic Davis-Foster"
email = "dominic@davis-foster.co.uk"

[project.urls]
Homepage = "https://github.com/domdfcoding/car-charging"
"Issue Tracker" = "https://github.com/domdfcoding/car-charging/issues"
"Source Code" = "https://github.com/domdfcoding/car-charging"

[tool.setuptools]
zip-safe = false
include-package-data = true
platforms = [ "Windows", "macOS", "Linux",]

[tool.whey]
base-classifiers = []
python-versions = [ "3.8", "3.9", "3.10", "3.11",]
python-implementations = [ "CPython",]
platforms = [ "Windows", "macOS", "Linux",]
license-key = "MIT"
package = "car_charging"

[tool.importcheck]
always = [
    "car_charging",
    "car_charging.config",
    "car_charging.consumption",
    "car_charging.influxdb",
    "car_charging.outputs",
    "car_charging.tariff",
    "car_charging.utils",
]

[tool.mypy]
python_version = "3.8"
namespace_packages = true
check_untyped_defs = true
warn_unused_ignores = true
no_implicit_optional = true
show_error_codes = true

[tool.snippet-fmt]
directives = [ "code-block",]

[tool.snippet-fmt.languages.python]
reformat = true

[tool.snippet-fmt.languages.TOML]
reformat = true

[tool.snippet-fmt.languages.ini]

[tool.snippet-fmt.languages.json]

[tool.dependency-dash."requirements.txt"]
order = 10

[tool.dep_checker.name_mapping]
attrs = "attr"
